# tatrapayplus-python

./: .deptry.toml  .pre-commit-config.yaml  .travis.yml  README.md  after_generator.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  python-tests.yml
docs/: Makefile  conf.py  installation.rst  make.bat  usage.rst
tatrapayplus/: client.py  enums.py  errors.py  helpers.py  models.py
tatrapayplus/models/: account_reference.py  address.py  amount.py  amount_range_rule.py  appearance_logo_request.py  appearance_request.py  apple_pay_token.py  apple_pay_token_token.py  apple_pay_token_token_header.py  available_payment_method.py  bank_transfer.py  bank_transfer_status.py  base_payment.py  capacity_info.py  card_detail.py  card_identifier_or_register.py  card_pay_amount.py  card_pay_status.py  card_pay_status_structure.py  card_pay_status_structure_comfort_pay.py  card_pay_update_instruction.py  color_attribute.py  comfort_pay.py  comfort_pay_status.py  direct_transaction_data.py  direct_transaction_data_reason_code.py  direct_transaction_ipsp_data.py  direct_transaction_status.py  direct_transaction_task_status_response.py  direct_transaction_tds_data.py  e2e.py  get_access_token200_response.py  get_access_token400_response.py  initiate_direct_transaction_request.py  initiate_direct_transaction_response.py  initiate_payment_request.py  initiate_payment_response.py  item_detail.py  item_detail_lang_unit.py  model400_error_body.py  (+20 more)
tests/: test_client.py
