[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tatrapayplus-python"
version = "0.0.1"
description = "Python SDK for Tatrapay Plus API"
authors = [{ name = "Smartbase", email = "info@smartbase.sk" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = ["tatrapay", "banking", "sdk", "api", "smartbase", "payment"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests",
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "mypy>=0.991",
    "ruff>=0.9.2",
    "openapi-python-client",
]

[project.urls]
Homepage = "https://SmartBase-SK.github.io/tatrapayplus-python/"
Repository = "https://github.com/SmartBase-SK/tatrapayplus-python"
Documentation = "https://SmartBase-SK.github.io/tatrapayplus-python/"

[tool.hatch.build.targets.wheel]
packages = ["tatrapayplus"]


[tool.mypy]
files = ["tatrapayplus"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT", "S", "B", "A", "C4", "T10", "SIM", "I",
    "C90", "E", "W", "F", "PGH", "UP", "RUF", "TRY"
]
ignore = [
    "E501", # Line too long
    "E731", # Do not assign lambda
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
